@@ -1,3 +1,7 @@
+Wed Apr 23 23:41:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* server.c (serve_update_prog): If in readonly mode, give an error.
+
 Wed Apr 23 19:07:41 1997  Norbert Kiesel  <nk@cosa.de>
 
 	* subr.c (line2argv): Allocate at least 4 slots for argv.
